# shared-todo

./: .dockerignore  .env.dist  Dockerfile  README.md  archiver.Dockerfile  docker-compose.yml  pyproject.toml
app/: archive_service.py  config.py  db.py  main.py  models.py
